fix stretching labels

--- a/src/components/OrderPage/ParamsStep/ParamsStep.scss
+++ b/src/components/OrderPage/ParamsStep/ParamsStep.scss
@@ -54,4 +54,5 @@
 .verticalInputs {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
 }
